<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".Hipoteca" 
        android:background="@drawable/bg">

        
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/textView1"
            android:drawingCacheQuality="high"
            android:prompt="@string/titulosp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/spinner1"
            android:layout_marginTop="6dp"
            android:text="@string/buscarpor"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RelativeLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
             >

            
            <EditText
                android:id="@+id/palabra"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.49"
                android:ems="10"
                android:textColor="@android:color/black"
                 >

            <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/n1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/abc_ic_search" />

        </LinearLayout>

        <Button
            android:id="@+id/todos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="todos"
            android:visibility="invisible" />
        
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" 

        />
 
    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coincidencias"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
     
</LinearLayout>


